--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,7 +40,9 @@ body {
   color: var(--foreground);
 }
 
-
+*{
+  scroll-behavior: smooth;
+}
 
 /* homepage */
 .header-bg {
@@ -61,6 +63,9 @@ body {
 }
 .flowing-stroke {
   animation: flowStroke 30s linear infinite;
+}
+.gradient-1 {
+  background: linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.08) 100%);
 }
 .swiper-pagination-bullet {
   color: #fefefe !important;
@@ -97,6 +102,9 @@ body {
       stroke-dashoffset: 0; /* Fully drawn */
   }
 }
+.take-bg:hover {
+  background-color:#F3F3F3;
+}
 .scrollbar-hide {
   scrollbar-width: none; /* Firefox */
 }
@@ -111,5 +119,7 @@ body {
   .swiper-pagination {
     bottom:12px !important;
   }
-
+  .gradient-1 {
+    background:transparent;
+  }
 }
